set card positions in media queries

--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Pratham's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
     <!-- Favicon Links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/site.webmanifest" />
   </head>
   <body>
     <!-- Custom Cursor -->
@@ -19,47 +33,47 @@
 
     <!-- Root Container -->
     <div class="container">
-      <div class="card">
+      <div class="card" id="card-1">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-2">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-3">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-4">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-5">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-6">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-7">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-8">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
 
-      <div class="card">
+      <div class="card" id="card-9">
         <div class="card-border"></div>
         <div class="card-content"></div>
       </div>
