--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Pratham's Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100;0,900;1,100;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Favicon Links -->
     <link
       rel="apple-touch-icon"
@@ -35,7 +41,12 @@
     <div class="container">
       <div class="card" id="card-1">
         <div class="card-border"></div>
-        <div class="card-content"></div>
+        <div class="card-content">
+          <div class="card-inner-grid">
+            <div class="profile-picture"></div>
+            <h1 class="hero-text"></h1>
+          </div>
+        </div>
       </div>
 
       <div class="card" id="card-2">
